@@ -1,1 +1,18 @@
 # DSA-Student-Society-System
+# DSA Student Society Management System
+
+This is a JavaFX-based project that simulates society and event management using core data structures:
+- Linked List (for societies & events)
+- Stack (for notifications)
+- Queue (for feedback)
+- Array (for students)
+- PieChart for report generation
+
+Icons are located under `src/application/icons/`
+
+## How to Run
+
+- Java 8 or higher required
+- JavaFX SDK must be linked in Eclipse or IntelliJ
+- VM arguments:
+--module-path "C:/javafx-sdk-XX.X.X/lib" --add-modules javafx.controls,javafx.fxml
